arquivos com link para desafio

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="challenge.html">challengeT6</a>
         </nav>
     </header>
     
@@ -35,9 +35,9 @@
                 <h2 class="apresentacao__conteudo__titulo">Estudos</h2>
                 <div class="apresentacao__conteudo__texto">
                 <ul class="apresentacao__conteudo__texto">
-                    <li>Curso tal - Alura Cursos <a href="https://drive.google.com/file/d/11PlSy3RnHaCOiEpJ5ElCdjX_cOBzMwbv/view?usp=sharing">com certificado Alura</a> </li>
-                    <li>Curso tal - Alura Cursos <a href="linkdocertificado">com certificado</a></li>
-                    <li>Curso tal - Alura Cursos <a href="linkdocertificado">com certificado</a></li>
+                    <li>Programação Iniciante - Alura Cursos <a href="https://drive.google.com/file/d/11PlSy3RnHaCOiEpJ5ElCdjX_cOBzMwbv/view?usp=sharing">com certificado Alura</a> </li>
+                    <li>Html, Css - Alura Cursos </li>
+                    <li>Curso tal - Alura Cursos </li>
                 </ul>
                 </div>    
             </section>
