--- a/challenge.html
+++ b/challenge.html
@@ -22,7 +22,7 @@
         <div class="logo"> <img  id="img"   src="./assets/Logo.png" ></div>
     
       <input class="label" type="text" id="texto" placeholder="Digite o texto">
-      <p id="resultado">Apenas letras minúsculas e sem acento.</p>  
+      <p id="resultado">Apenas letras minúsculas e sem acento</p>  
       <div class="button-container">
       <button class="cript" onclick="criptografar()">Criptografar</button><br>
       <button class="descript"    onclick="descriptografar()">Descriptografar</button>
