--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="challenge.html">challengeT6</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
@@ -44,7 +44,7 @@
                 <a  class="apresentacao__links__navegacao" href="https://twitter.com/leilaengenharia">
                     <img src="./assets/twitter.png">twitter</a></div>
         </section>
-        <img class= "apresentacao__imagem" src="./assets/perfilwe.png" alt="Foto da Joana Santos programando">
+        <img class= "apresentacao__imagem" src="./assets/perfilwe.png">
     </main>
     <!DOCTYPE html>
     <html lang="pt-br">
